<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_quiz_question"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="8dp"
            android:gravity="start"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            tools:text="Question"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fragment_quiz_false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/button_false"/>

            <Button
                android:id="@+id/fragment_quiz_true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/button_true"/>
        </LinearLayout>

        <EditText
            android:id="@+id/fragment_quiz_answer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:gravity="start"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            tools:text="Answer"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragment_quiz_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_preview"/>

            <Button
                android:id="@+id/fragment_quiz_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_next"/>

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>